# neat-html

./: .gitignore  LICENSE  README.md  hello_world.py  justfile  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: formatting_html.md
examples/: forms.py  hello_world.py  nested.py
neat_html/: __init__.py  compiler.py  constants.py  node.py  tokenizer.py  tokens.py  types.py  utils.py
pyhtmldsl/: __init__.py  compiler.py  constants.py  node.py  tokenizer.py  tokens.py  utils.py
python_html_dsl/: __init__.py  compiler.py  constants.py  node.py  tokenizer.py  tokens.py  types.py  utils.py
tests/: test_dsl.py  test_pyhtmldsl.py  test_utils.py
tests/neat_html/: test_init.py
tests/python_html_dsl/: test_init.py
