[tool.poetry]
name = "neat-html"
version = "0.4.0"
description = "A python library for writing and composing HTML."
authors = ["Sam Dudley <dudley.co.uk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SamDudley/neat-html"
keywords = ["html"]
classifiers = ["Topic :: Text Processing :: Markup :: HTML"]
packages = [{ include = "neat_html" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.267"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I", "U", "B", "Q"]

[tool.mypy]
strict = true

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/excluding.html#advanced-exclusion
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
