[tool.poetry]
name = "neat-html"
version = "0.6.0"
description = "A python library for writing and composing HTML."
authors = ["Sam Dudley <dudley.co.uk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SamDudley/neat-html"
keywords = ["html"]
classifiers = ["Topic :: Text Processing :: Markup :: HTML"]
packages = [{ include = "neat_html" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I", "U", "B", "Q"]

[tool.mypy]
strict = true

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/excluding.html#advanced-exclusion
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
